[tool.poetry]
name = "password-strength-checker-api"
version = "0.1.0"
description = "Based on the user's requirements and the information gathered, the task involves creating an endpoint in a FastAPI application that performs comprehensive password strength analysis. The analysis will consider various factors including the password's length, complexity (incorporating uppercase and lowercase letters, numbers, and special characters), and adherence to recommended security practices (such as avoiding sequential or repeated characters). Additionally, the endpoint will check the password against known data breaches and common passwords lists to further ensure its robustness. "
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "*"
passlib = {version = "*", extras = ["bcrypt"]}
prisma = "*"
pydantic = "*"
requests = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
